--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<p>Accio ipsum text</p>
 
 <body>
 	<!-- the entire body must be written by student -->
