--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-	<p>Accio ipsum text</p>
+	<p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
 
 <body>
 	<!-- the entire body must be written by student -->
